[package]
name = "lxd"
version = "0.1.8"
edition = "2021"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "A Rust library for controlling LXD"
documentation = "https://docs.rs/lxd"
repository = "https://github.com/system76/lxd-rs"
readme = "README.md"
license = "MIT"

[lib]
name = "lxd"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempdir = "0.3"
